@@ -10,6 +10,8 @@ aquaportal.resource.directory = /Users/Shared/bioportal/resources
 # Directory where the aquaportal back-end stores the uploaded files
 aquaportal.uploads.directory = ${aquaportal.resource.directory}/uploads
 
+aquaportal.voc2rdf.dir = /Users/Shared/mmiregistry/ontmd/preuploads/voc2rdf/
+
 appserver.home=/Applications/apache-tomcat-6.0.16
 appserver.lib=${appserver.home}/lib
 appserver.logs=${appserver.home}/logs
